<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484848"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Scan" >

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/enterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/enterProduct"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/enterProduct"
        android:contentDescription="@string/enterProductName"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/enterProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterProductLabel"
        android:layout_below="@+id/enterProductLabel"
        android:layout_marginTop="40dp"
        android:text="@string/enterProductName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterProduct"
        android:layout_below="@+id/orLabel"
        android:layout_marginTop="40dp"
        android:text="@string/Barcode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/orLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/barcodeText"
        android:layout_below="@+id/enterNameText"
        android:layout_marginTop="41dp"
        android:text="@string/or"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/barcodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/barcode"
        android:layout_alignLeft="@+id/enterNameText"
        android:ems="10"
        android:hint="@string/Barcode" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcodeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/scanButton"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/enterProductLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Hello"
        android:layout_below="@+id/Hello"
        android:layout_marginTop="14dp"
        android:text="@string/scan"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

</RelativeLayout>