<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvDataLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/data_label" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDataLabel"
        android:layout_below="@+id/tvDataLabel"
        android:layout_marginTop="22dp"
        android:text="@string/data" />

    <Button
        android:id="@+id/bClose"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvData"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="56dp"
        android:text="@string/close_button" />

</RelativeLayout>
