<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUp"
    android:background= "#484848" >

    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="22dp"
        android:text="@string/signUp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reenterPassword"
        android:layout_toRightOf="@+id/userNameLabel"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userNameLabel"
        android:layout_alignBottom="@+id/userNameLabel"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/userName" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailLabel"
        android:layout_alignBottom="@+id/emailLabel"
        android:layout_alignLeft="@+id/passwordConfText"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reenterPassword"
        android:layout_below="@+id/userNameText"
        android:layout_marginTop="26dp"
        android:text="@string/Password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpLabel"
        android:layout_marginTop="33dp"
        android:text="@string/userName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/reenterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameLabel"
        android:layout_alignRight="@+id/userNameLabel"
        android:layout_below="@+id/passwordLabel"
        android:layout_marginTop="20dp"
        android:text="@string/reenterPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordConfText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignTop="@+id/reenterPassword"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reenterPassword"
        android:layout_below="@+id/reenterPassword"
        android:layout_marginTop="26dp"
        android:text="@string/Email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:onClick="callSignUp"
        android:text="@string/signUp"
        android:textColor="#ffffff" />

    <RadioButton
        android:id="@+id/physicianRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/patientRadio"
        android:layout_alignBottom="@+id/patientRadio"
        android:layout_alignRight="@+id/userNameText"
        android:hint="@string/Physician"
        android:text="@string/Physician" />

    <RadioButton
        android:id="@+id/patientRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailLabel"
        android:layout_below="@+id/emailText"
        android:layout_marginTop="26dp"
        android:text="@string/Patient" />

</RelativeLayout>
