<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.nutrack.NutritionixActivity$PlaceholderFragment" >
    
    <!-- 
    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etFoodName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="@string/food_name_label" />
    
    <EditText
        android:id="@+id/etFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFoodName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/food_name_label" />
	-->

    <Button
        android:id="@+id/bScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvBarcode"
        android:text="@string/scan_button" />

    <EditText
        android:id="@+id/etBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bScan"
        android:layout_alignBottom="@+id/bScan"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/barcode_label" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBarcode"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:text="@string/barcode_label" />

    <Button
        android:id="@+id/bSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bClear"
        android:layout_toLeftOf="@+id/bScan"
        android:text="@string/send_button" />

    <Button
        android:id="@+id/bClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bScan"
        android:layout_marginTop="38dp"
        android:layout_toRightOf="@+id/tvBarcode"
        android:text="@string/clear_button" />

</RelativeLayout>