<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EnterSuggestion" 
    android:background= "#484848">

    <Button
        android:id="@+id/OkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="122dp"
        android:text="@string/Ok" 
        android:onClick="callViewPatient"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/HelloEnterSuggestionLabel"
        android:layout_below="@+id/HelloEnterSuggestionLabel"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/suggestionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/HelloEnterSuggestionLabel"
        android:layout_marginTop="29dp"
        android:text="@string/Suggestions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/HelloEnterSuggestionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="23dp"
        android:text="@string/Hello"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
